--- a/Q4_Spark.L3.ipynb
+++ b/Q4_Spark.L3.ipynb
@@ -21,6 +21,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "User-User - это рекомендация товаров на основании схожести пользователей (напр. я купила товары, которые также купил другой клиент, т.е. предположительно у нас схожи вкусы - можно мне рекомендовать другие товары из его покупок, с большой долей вероятности они мне понравятся тоже)\n",
+    "\n",
+    "Item-Item - рекомендации на осонове похожести товаров (рекомендации типа \"С этим товаром часто покупают\", т.е формируется множество объектов похожих на товар (с таким же рейтингом или, например, фильмы с такими же актерами) или часто участвующих с ним в связке (Совстречаемости) и рекомендуюся ближайшие \"соседи\")\n",
+    "\n",
+    "Схожесть в базе для анализа таблица типа user-item из которой для анализа беруться разные данные в зависимости от метода рекомендации. Каждый из методов рекомендаций имеет свои несдостатки: для user-based рекомендаций - это растущее количество пользователей, а также рекомендации для холодных пользователей, которые еще не оставили о себе данныых для сравнения, для item-based это трудоемкость и субъективность оценок пользователей (кто-то всем ставит 2, а кто-то завышает из-за чего сложно говорить о реально схожести товаров по какаим-то характеристикам между собой). \n",
+    "\n",
+    "Функцию item_item_rec(interaction_matrix) можно использовать для user_user_rec, если транспорнировать матрицу так, чтобы по строкам получись юзеры (User), а по столбцам - товары (Item).\n",
+    "\n",
+    "В Item-Item мы используем KNN (метод ближайших соседей), исползуем полностью всю матрицу, учитываем только кейсы реального взаимодействия. В ALS мы используем разложение матрицы на матрицу факторов юзеров и матрицу факторов товаров и исследуем взаимодействие матрицы ембедингов юзеров и товаров, даже если пользователь не имел взаимодействия с товаром, то эта характеристика тоже влияет на результат."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "XnuQ5DDD49cP"
    },
@@ -30,11 +45,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. товары из той же группы, что были купленны ранее (канцелярия, аксессуары, принадлежности для авто)\n",
+    "2. рекомендовать какие-то новые товары (новинки по дате заведения в матрицу товаров), похожие с тем, что покупал ранее или из той же группы\n",
+    "3. если есть данные о пользователе, то учитывать их (дата рождения, количество детей)\n",
+    "\n",
+    "Но это кажется, что-то не то... как вес можно учитывать частоту покупок товара пользователем и дату последней покупки (например, если купил один раз два года назад, то врядли купит еще, а если покупает с какой-то регулярностью, то скорее всего купит скоро). Можно ввести критерий оборачиваемости товара - как часто надо покупать следующий аналогичный, на какой период пользования расчитан товар, и предлагать снова, когда предполагаемый период пользования заканчивается. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "UmKifKo649cQ"
    },
    "source": [
     "3. Какие ограничения есть у ALS? (Тип информации, линейность/нелинейность факторов и т д)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В анализе участвует только пользователь и товар, нет возможности сделать многофакторный анализ и подключить внешние фичи в качестве параметров, в качестве рузультата получаем не вероятность оценку.\n",
+    "Для разложения User-Item матрицы на матрицы эмбедингов юзеров и товаров необходимо, чтобы каждый пользователь сделал хотя бы одну покупку или чтобы каждый товар купили хотя бы один раз."
    ]
   },
   {
@@ -73,9 +107,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: implicit in c:\\users\\sklod\\anaconda3\\lib\\site-packages (0.4.8)\n",
-      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\sklod\\anaconda3\\lib\\site-packages (from implicit) (4.47.0)\n",
       "Requirement already satisfied: scipy>=0.16 in c:\\users\\sklod\\anaconda3\\lib\\site-packages (from implicit) (1.4.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\sklod\\anaconda3\\lib\\site-packages (from implicit) (1.18.5)\n"
+      "Requirement already satisfied: numpy in c:\\users\\sklod\\anaconda3\\lib\\site-packages (from implicit) (1.18.5)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\sklod\\anaconda3\\lib\\site-packages (from implicit) (4.47.0)\n"
      ]
     }
    ],
@@ -455,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "286deb00cd35487fac27bc31ff60eef2",
+       "model_id": "829141aa246d4a1b86548a8753e4077d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08c7d4a7ffd446a7aeec319484a7bfd4",
+       "model_id": "6889094a89514c7fb5c4c64b6e3d673d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -517,7 +551,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ddf793c4c6e457baaf8370879887848",
+       "model_id": "068ca808ff2543edbeba6b71fc50c137",
        "version_major": 2,
        "version_minor": 0
       },
@@ -548,7 +582,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24c534ce7efd46a8a07f762b4bc28a88",
+       "model_id": "d5fbb73b6d1e424bb1fffb93a82320d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,22 +639,22 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>nunique</td>\n",
-       "      <td>0.20206</td>\n",
+       "      <td>0.20392</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>mean</td>\n",
-       "      <td>0.18776</td>\n",
+       "      <td>0.19109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>max</td>\n",
-       "      <td>0.18139</td>\n",
+       "      <td>0.18580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>count</td>\n",
-       "      <td>0.18051</td>\n",
+       "      <td>0.18080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -628,10 +662,10 @@
       ],
       "text/plain": [
        "   aggfunc  presision_at_k\n",
-       "3  nunique         0.20206\n",
-       "2     mean         0.18776\n",
-       "1      max         0.18139\n",
-       "0    count         0.18051"
+       "3  nunique         0.20392\n",
+       "2     mean         0.19109\n",
+       "1      max         0.18580\n",
+       "0    count         0.18080"
       ]
      },
      "execution_count": 14,
@@ -654,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cамый высокий результат даёт \"nunique\", потому что...(дописать)"
+    "Cамый высокий результат даёт \"nunique\", потому что nunique косвенно пересекается с популярностью товара."
    ]
   },
   {
